--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="thebasics.css">
 </head>
+<body>
 <div id = "maincontainer">
     <h1>Front End Dev Basics</h1>
     <div id ="video-box">
@@ -15,5 +16,6 @@
         <li><button id="basic3">JavaScript</button></li>
     </ul>
 </div>
+</body>
 <script src="thebasics.js"></script>
 </html>
